--- a/datamine/lang/Chineses_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/Chineses_xml.pak/text_ui_Activeskills.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Christopher</LastAuthor>
-  <Created>2020-03-17T16:48:44Z</Created>
-  <LastSaved>2020-03-17T16:48:44Z</LastSaved>
+  <LastAuthor>Cthylla</LastAuthor>
+  <Created>2020-03-31T09:05:57Z</Created>
+  <LastSaved>2020-03-31T09:05:57Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,11 +18,10 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>7980</WindowHeight>
-  <WindowWidth>21570</WindowWidth>
+  <WindowHeight>5655</WindowHeight>
+  <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
-  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -4402,7 +4401,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_SpreadShot_variant_1</Data></Cell>
     <Cell ss:StyleID="s66"><Data ss:Type="String">Flying Death</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">死亡横飞</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">飞来横祸</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Variant_SpreadShot_variant_1_desc</Data></Cell>
@@ -9499,7 +9498,7 @@
     <VerticalResolution>600</VerticalResolution>
    </Print>
    <Selected/>
-   <LeftColumnVisible>1</LeftColumnVisible>
+   <LeftColumnVisible>2</LeftColumnVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
