--- a/datamine/lang/Chineses_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/Chineses_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Christopher</LastAuthor>
-  <Created>2020-03-17T16:49:05Z</Created>
-  <LastSaved>2020-03-17T16:49:05Z</LastSaved>
+  <LastAuthor>Cthylla</LastAuthor>
+  <Created>2020-03-31T09:06:04Z</Created>
+  <LastSaved>2020-03-31T09:06:04Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,11 +18,10 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>7980</WindowHeight>
-  <WindowWidth>21570</WindowWidth>
+  <WindowHeight>5655</WindowHeight>
+  <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
-  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -1382,13 +1381,13 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T10</Data></Cell>
-    <Cell ss:StyleID="s71"><Data ss:Type="String">Solar Flare Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">耀斑手枪</Data></Cell>
+    <Cell ss:StyleID="s71"><Data ss:Type="String">Shadow-Piercing Pistol</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">影刺手枪</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T11</Data></Cell>
-    <Cell ss:StyleID="s71"><Data ss:Type="String">Shadow-Piercing Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">影刺手枪</Data></Cell>
+    <Cell ss:StyleID="s71"><Data ss:Type="String">Solar Flare Pistol</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">耀斑手枪</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s72"><Data ss:Type="String">ui_Weapon_Pistol_T12</Data></Cell>
@@ -6770,6 +6769,7 @@
     <VerticalResolution>600</VerticalResolution>
    </Print>
    <Selected/>
+   <LeftColumnVisible>2</LeftColumnVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
