--- a/datamine/lang/polish_xml.pak/text_ui_Activeskills.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Activeskills.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Christopher</LastAuthor>
-  <Created>2020-03-17T16:47:05Z</Created>
-  <LastSaved>2020-03-17T16:47:05Z</LastSaved>
+  <LastAuthor>Cthylla</LastAuthor>
+  <Created>2020-03-31T09:03:56Z</Created>
+  <LastSaved>2020-03-31T09:03:56Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,11 +18,10 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>7980</WindowHeight>
-  <WindowWidth>21570</WindowWidth>
+  <WindowHeight>5655</WindowHeight>
+  <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
-  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -472,7 +471,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_Bomb_desc</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">Launch a Projectile to the cursor’s location that explodes, dealing Damage to Enemies in an Area-of-Effect.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Attack:&lt;/font&gt; Only usable with daggers, bows and pistols.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Attack&lt;/b&gt;, &lt;b&gt;Projectile&lt;/b&gt;, &lt;b&gt;Rogue&lt;/b&gt;, &lt;b&gt;Device&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Wystrzel pocisk w miejsce kursora, które eksploduje, zadając obrażenia wrogom w obszarze działania.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Attack:&lt;/font&gt; Można używać tylko ze sztyletami, łukami i pistoletami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;:&lt;b&gt;atak&lt;/b&gt;,&lt;b&gt;pocisk&lt;/b&gt;,&lt;b&gt;łotr&lt;/b&gt;,&lt;b&gt;urządzenie&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Wystrzel pocisk w miejsce kursora, które eksploduje, zadając obrażenia wrogom w obszarze działania.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Attack: &lt;/font&gt; Można używać tylko ze sztyletami, łukami i pistoletami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;atak&lt;/b&gt;, &lt;b&gt;pocisk&lt;/b&gt;, &lt;b&gt;łotr&lt;/b&gt;, &lt;b&gt;urządzenie&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_Bomb_Lore</Data></Cell>
@@ -892,7 +891,7 @@
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SmokeBomb_desc</Data></Cell>
     <Cell ss:StyleID="s68"><Data ss:Type="String">Cast a cloud at your location that makes you Invisible and decreases your Threat.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Attack:&lt;/font&gt; Only usable with daggers, bows and pistols.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Skill Tags&lt;/font&gt;: &lt;b&gt;Attack&lt;/b&gt;, &lt;b&gt;Rogue&lt;/b&gt;.</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Rzuć chmurę na swoją lokalizację, która zapewnia ci niewidzialność i zmniejsza twój poziom zagrożenia.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Atak:&lt;/font&gt;Można używać tylko ze sztyletami, łukami i pistoletami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;atak&lt;/b&gt;, &lt;b&gt;łotr&lt;/b&gt;.</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Rzuć chmurę na swoją lokalizację, która zapewnia ci niewidzialność i zmniejsza twój poziom zagrożenia.\n\n&lt;font color=&quot;#cb5316&quot;&gt;Atak: &lt;/font&gt;Można używać tylko ze sztyletami, łukami i pistoletami.\n\n&lt;font color=&quot;#509FFF&quot;&gt;Cechy umiejętności&lt;/font&gt;: &lt;b&gt;atak&lt;/b&gt;, &lt;b&gt;łotr&lt;/b&gt;.</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_AST_SmokeBomb_Lore</Data></Cell>
@@ -9499,7 +9498,7 @@
     <VerticalResolution>600</VerticalResolution>
    </Print>
    <Selected/>
-   <LeftColumnVisible>1</LeftColumnVisible>
+   <LeftColumnVisible>2</LeftColumnVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
