--- a/datamine/lang/polish_xml.pak/text_ui_Loot.xml
+++ b/datamine/lang/polish_xml.pak/text_ui_Loot.xml
@@ -8,9 +8,9 @@
  <DocumentProperties xmlns="urn:schemas-microsoft-com:office:office">
   <Title>Untitled Spreadsheet</Title>
   <Author>Unknown Creator</Author>
-  <LastAuthor>Christopher</LastAuthor>
-  <Created>2020-03-17T16:47:27Z</Created>
-  <LastSaved>2020-03-17T16:47:27Z</LastSaved>
+  <LastAuthor>Cthylla</LastAuthor>
+  <Created>2020-03-31T09:04:03Z</Created>
+  <LastSaved>2020-03-31T09:04:03Z</LastSaved>
   <Company>Microsoft Corporation</Company>
   <Version>16.00</Version>
  </DocumentProperties>
@@ -18,11 +18,10 @@
   <AllowPNG/>
  </OfficeDocumentSettings>
  <ExcelWorkbook xmlns="urn:schemas-microsoft-com:office:excel">
-  <WindowHeight>7980</WindowHeight>
-  <WindowWidth>21570</WindowWidth>
+  <WindowHeight>5655</WindowHeight>
+  <WindowWidth>17745</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
-  <RefModeR1C1/>
   <ProtectStructure>False</ProtectStructure>
   <ProtectWindows>False</ProtectWindows>
  </ExcelWorkbook>
@@ -1382,13 +1381,13 @@
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T10</Data></Cell>
-    <Cell ss:StyleID="s71"><Data ss:Type="String">Solar Flare Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistolet Rozbłysku Słonecznego</Data></Cell>
+    <Cell ss:StyleID="s71"><Data ss:Type="String">Shadow-Piercing Pistol</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Przeszywający Mrokiem Pistolet</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_Weapon_Pistol_T11</Data></Cell>
-    <Cell ss:StyleID="s71"><Data ss:Type="String">Shadow-Piercing Pistol</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">Przeszywający Mrokiem Pistolet</Data></Cell>
+    <Cell ss:StyleID="s71"><Data ss:Type="String">Solar Flare Pistol</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">Pistolet Rozbłysku Słonecznego</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0">
     <Cell ss:StyleID="s72"><Data ss:Type="String">ui_Weapon_Pistol_T12</Data></Cell>
@@ -6488,7 +6487,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="127.5">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent1_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Rerolls all magic effects when used on an item. It will consume all socketed gems to guarantee a magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Zmienia wszystkie efekty magiczne, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować efekt magiczny, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTylko większe reagenty mogą oddziaływać na legendarne przedmioty.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Zmienia wszystkie efekty magiczne, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować efekt magiczny, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTego przedmiotu nie można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent1_lore</Data></Cell>
@@ -6503,7 +6502,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent2_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect and adds another when used on an item. It will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Usuwa losowy efekt magiczny i dodaje inny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować dodanie efektu magicznego, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTylko większe reagenty mogą oddziaływać na legendarne przedmioty.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Usuwa losowy efekt magiczny i dodaje inny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować dodanie efektu magicznego, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTego przedmiotu nie można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="51">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent2_lore</Data></Cell>
@@ -6518,7 +6517,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent3_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Adds a new random magic effect when used on an item. It will consume all socketed gems to guarantee a new magic effect whose power depends on the gems' level, and whose type is chosen randomly among all the types of gems on the item.&#10;&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Dodaje nowy losowy efekt magiczny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować dodanie efektu magicznego, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTen przedmiot można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Dodaje nowy losowy efekt magiczny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gnieździe, aby zagwarantować dodanie efektu magicznego, którego moc zależy od poziomu klejnotów i którego rodzaj jest wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie.&#10;&#10;\n\nTego przedmiotu nie można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="63.75">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent3_lore</Data></Cell>
@@ -6533,7 +6532,7 @@
    <Row ss:AutoFitHeight="0" ss:Height="76.5">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent4_gameplaydesc</Data></Cell>
     <Cell ss:StyleID="s78"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Removes a random magic effect when used on an item. It will consume all socketed gems to guarantee keeping a magic effect whose type is chosen randomly among all the types of gems on the item. Greater gems power allow the keeping of higher level magic effects.&#10;\n\nThis item cannot be applied on legendary and unique items.&lt;/Font&gt;</Data></Cell>
-    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Usuwa losowy efekt magiczny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gniazdach, aby zachować efekt magiczny, wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie. Większa moc klejnotów pozwoli zachować wyższy poziom efektu magicznego.&#10;\n\nTen przedmiot można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
+    <Cell ss:StyleID="s65"><Data ss:Type="String">&lt;Font Size=&quot;15&quot;&gt;Usuwa losowy efekt magiczny, gdy zostanie użyty na przedmiocie. Zużyje wszystkie klejnoty umieszczone w gniazdach, aby zachować efekt magiczny, wybierany losowo spośród wszystkich rodzajów klejnotów w przedmiocie. Większa moc klejnotów pozwoli zachować wyższy poziom efektu magicznego.&#10;\n\nTego przedmiotu nie można zastosować na legendarnych i unikalnych przedmiotach.&lt;/Font&gt;</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="89.25">
     <Cell ss:StyleID="s65"><Data ss:Type="String">ui_reagent4_lore</Data></Cell>
@@ -6770,6 +6769,7 @@
     <VerticalResolution>600</VerticalResolution>
    </Print>
    <Selected/>
+   <LeftColumnVisible>2</LeftColumnVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
