--- a/datamine/lang/english_xml.pak/text_ui_EIM.xml
+++ b/datamine/lang/english_xml.pak/text_ui_EIM.xml
@@ -85,8 +85,8 @@
     </Crn>
    </Xct>
   </SupBook>
-  <WindowHeight>12165</WindowHeight>
-  <WindowWidth>28800</WindowWidth>
+  <WindowHeight>9465</WindowHeight>
+  <WindowWidth>24000</WindowWidth>
   <WindowTopX>32767</WindowTopX>
   <WindowTopY>32767</WindowTopY>
   <TabRatio>274</TabRatio>
@@ -1693,7 +1693,7 @@
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s79"><Data ss:Type="String">ui_eim_poisonchance_on_toxic_damage_score_percent</Data></Cell>
-    <Cell ss:StyleID="s81"><Data ss:Type="String">%1 Poison Chance Score on daling Toxic Damage</Data></Cell>
+    <Cell ss:StyleID="s81"><Data ss:Type="String">%1 Poison Chance Score on dealing Toxic Damage</Data></Cell>
    </Row>
    <Row ss:AutoFitHeight="0" ss:Height="15.75">
     <Cell ss:StyleID="s79"><Data ss:Type="String">ui_eim_poisonstack_duration_increase</Data></Cell>
@@ -3037,11 +3037,11 @@
    </Print>
    <Zoom>85</Zoom>
    <Selected/>
-   <TopRowVisible>168</TopRowVisible>
+   <TopRowVisible>335</TopRowVisible>
    <Panes>
     <Pane>
      <Number>3</Number>
-     <ActiveRow>187</ActiveRow>
+     <ActiveRow>347</ActiveRow>
      <ActiveCol>1</ActiveCol>
     </Pane>
    </Panes>
